# bpEncode

./: .gitignore  CMakeLists.txt  README.md  app.py  data_prep.py  demo.py  packages.txt  proposal.tex  pyproject.toml  requirements.txt
bpEncode.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: bootstrapped_exp.csv  english.txt  new_data_v1.csv  new_stats_v1.csv  proposal_data_demo.csv  proposal_data_demo_v2.csv  proposal_data_demo_v3.csv  proposal_data_demo_v5.csv  proposal_data_demo_v7.csv  proposal_data_demo_v8.csv  proposal_stas_summary.csv  proposal_stas_summary_v5.csv  proposal_stats_summary_v7.csv  proposal_stats_summary_v8.csv  raramuri.txt
docs/: index.html
src/: CMakeLists.txt  bpe.cpp  data_prep.py  data_prep_2.py  ling_data.py  setup.py  visualize.py  visualize_2.py
src/bpEncode/: __init__.py  binding.cpp  bpe.cpp  bpe.hpp  bpe_demo.cpp
tex_files/: proposal.tex
